<resources>
    <string name="app_name">养肥君</string>
    <string name="add">添加</string>
    <string name="more">更多</string>
    <string name="search_hint">搜索书名</string>
    <string name="transition">transition</string>

    <string name="state">状态</string>
    <string name="summary">详情</string>
    <string name="subscribe">订阅</string>
    <string name="unsubscribe">取消订阅</string>
    <string name="state_end">完结</string>
    <string name="today">今日</string>
    <string name="yestoday">昨日</string>
    <string name="old_day">往日</string>
    <string name="clear">清除</string>
    <string name="search_result">搜索结果</string>

    <string name="tips">提示</string>
    <string name="guide">养肥君能关注指定图书的连载状态，并且在养肥或者完结时以通知的方式提醒你。目前支持：起点中文网、晋江文学城、磨铁中文网、刺猬猫、豆瓣阅读、雁北堂、寒武纪年。\n点击右上角的「 + 」来关注第一本书吧！</string>

    <string name="book_statistics_qidian">共%d章 ｜ 月票%d张 ｜ 推荐票%d张</string>
    <string name="book_statistics_jijiang">共%d章 ｜ 收藏数%d ｜ 营养液%d瓶</string>
    <string name="book_statistics_etbang">共%d章 ｜ 金票%d张 ｜ %d人喜欢看</string>
    <string name="book_statistics_motie">共%d章 ｜ 点击数%d ｜ 推荐票%d张</string>
    <string name="book_statistics_ciweimao">共%d章 ｜ 月票%d张 ｜ 推荐票%d张</string>
    <string name="book_statistics_hanwujinian">共%d章 ｜ 收藏数%d ｜ 推荐票%d张</string>
    <string name="book_statistics_douban">共%d章 ｜ 阅读%d ｜ 推荐票%d张</string>
    <string name="book_statistics_faloo">共%d章 ｜ 月票%d张 ｜ 鲜花%d</string>
    <string name="book_statistics_linovel">共%d章 ｜ 收藏%d ｜ 热度%d</string>
    <string name="web">网站</string>

</resources>
