<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.HomeActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/mHomeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mHomeRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="64dp"
                android:paddingBottom="@dimen/x4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <View
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:background="@drawable/bg_overlay"
                tools:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_overlay"
                android:rotation="180"
                tools:visibility="gone" />
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.card.MaterialCardView
        style="@style/AppTheme.CardView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/x4"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end"
        android:layout_margin="@dimen/x2"
        app:cardCornerRadius="@dimen/x2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mHomeMoreButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/selected_background"
                android:contentDescription="@string/more"
                android:onClick="onClick"
                android:paddingStart="@dimen/x2"
                android:paddingEnd="@dimen/x2"
                android:src="@drawable/ic_action_more" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorStroke" />

            <ImageButton
                android:id="@+id/mHomeAddButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/selected_background"
                android:contentDescription="@string/add"
                android:onClick="onClick"
                android:paddingStart="@dimen/x2"
                android:paddingEnd="@dimen/x2"
                android:src="@drawable/ic_action_add" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/mHomeTips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x2"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="@dimen/x2"
        android:background="@drawable/bg_tips"
        android:orientation="vertical"
        android:padding="@dimen/x2"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tips"
            android:src="@drawable/ic_tips" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/x1"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/guide"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp" />

</RelativeLayout>